<resources>
    <string name="app_name">My Application</string>
    <string name="now_loading">Почти\nзагрузились</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_login">Логин</string>
    <string name="reg_e_mail">E-mail</string>
    <string name="reg_repeat_password">Повторите пароль</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="login_login">Войти</string>
    <string name="login_auth">Авторизация</string>
    <string name="login_slogan">Нам нужно знать, кто заказывает</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_username">Username</string>
    <string name="log_rem_password">забыли пароль?</string>
    <string name="login_reg">зарегистрироваться</string>
    <string name="profile_replace_adress">Изменить адрес\nсейчас:address...</string>
    <string name="profile_replace_adres">Изменить адрес</string>
    <string name="profile_dont_call">Не звонить</string>
    <string name="main_menu_restourans">Рестораны</string>
    <string name="main_menu_search">⌕ Поиск</string>
    <string name="main_menu_burgers">Бургеры</string>
    <string name="main_menu_sushi">Суши</string>
    <string name="main_menu_pizza">Пицца</string>
    <string name="main_menu_meat">Шашлык</string>
    <string name="main_menu_shaurma">Шаурма</string>
    <string name="main_menu_rest_grade0">4.5★</string>
    <string name="main_menu_rest_name0">Rostics</string>
    <string name="main_menu_rest_name1">Вкусно-и-точка</string>
    <string name="main_menu_rest_grade1">4.7★</string>
    <string name="main_menu_rest_name2">Burger King</string>
    <string name="main_menu_rest_grade2">1.3★</string>
    <string name="main_menu_map_text">Карта ресторанов</string>
    <string name="cart_cart">Корзина</string>
    <string name="cart_rest_name">Rostics</string>
    <string name="pay_text_address">Укажите адрес</string>
    <string name="pay_text_card_number">Укажите номер карты</string>
    <string name="pay_pay_button">Оплатить</string>
    <string name="pay_title">Оплата</string>
    <string name="map_courier_go_now">Курьер уже едет</string>
    <string name="map_courier_time_info">ещё ~10 минут</string>
    <string name="main_menu_go_to_map_button">Перейти</string>
    <string name="cart_go_to_pay_button">Перейти к оплате</string>
    <string name="cart_rest_time">40-50 мин</string>
    <string name="cart_product0_name">Картошка Фри</string>
    <string name="cart_product0_price">150 руб</string>
    <string name="minus">-</string>
    <string name="cart_product0_count">1</string>
    <string name="plus">+</string>
    <string name="cart_product1_name">Нагетсы</string>
    <string name="cart_product1_price">100 руб</string>
    <string name="cart_product1_count">1</string>
    <string name="cart_result_price">Итого: 250 руб</string>
    <string name="cart_result_calories">200 ккл</string>
    <string name="cart_anything_more">Что-то ещё?</string>
    <string name="cart_more_product0">Кетчуп</string>
    <string name="cart_more_product1">Майонез</string>
    <string name="cart_more_product2">Барбекю</string>
    <string name="cart_more_product3">Кола</string>
    <string name="cart_more_product4">Кола Zero</string>
    <string name="cart_more_product5">Салфетки</string>
    <string name="menu_rest_name">menu_rest_name</string>
    <string name="goto_cart_bttn">В корзину</string>>
</resources>