<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="307dp"
        android:layout_height="178dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:srcCompat="@drawable/logo_placeholder" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anonymous_pro"
        android:text="@string/login_auth"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/imageButtonLanguage"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_language_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="289dp"
        android:layout_height="333dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="34dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_login"
            android:inputType="text"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonRemPassword"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="start"
            android:background="#00000000"
            android:insetLeft="-5dp"
            android:insetTop="-10dp"
            android:insetBottom="0dp"
            android:text="@string/log_rem_password"
            android:textAlignment="textStart"
            android:textColor="@color/sys_blue"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/anonymous_pro"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/login_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="#00000000"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_reg"
            android:textColor="@color/sys_blue"
            android:textSize="10sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/anonymous_pro"
        android:text="@string/login_slogan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>