<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    android:fitsSystemWindows="true">


    <TextView
        android:id="@+id/textViewRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anonymous_pro"
        android:text="@string/main_menu_restourans"
        android:textColor="#FFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonProfile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#00FFFFFF"
        android:cropToPadding="false"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_placeholder" />

    <ImageButton
        android:id="@+id/imageButtonLanguage"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonGoToCart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_language_icon" />

    <ImageButton
        android:id="@+id/imageButtonGoToCart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_temp_cart" />

    <EditText
        android:id="@+id/editTextTextSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/br_text"
        android:ems="10"
        android:fontFamily="@font/anonymous_pro"
        android:hint="@string/main_menu_search"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text=""
        android:textAlignment="textStart"
        android:textColor="#fff"
        android:textColorHint="#B3B3B3"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonProfile" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextSearch">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/burger" />

                <TextView
                    android:id="@+id/textViewCategory0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:text="@string/main_menu_burgers"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:srcCompat="@drawable/sushi" />

                <TextView
                    android:id="@+id/textViewCategory1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:text="@string/main_menu_sushi"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/pizza" />

                <TextView
                    android:id="@+id/textViewCategory2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:text="@string/main_menu_pizza"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/meat" />

                <TextView
                    android:id="@+id/textViewCategory3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:text="@string/main_menu_meat"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/shaurma" />

                <TextView
                    android:id="@+id/textViewCategory4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/anonymous_pro"
                    android:text="@string/main_menu_shaurma"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="492dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/rostics" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRestName0"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_name0"
                        android:textAlignment="textStart"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewRestGrade0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_grade0"
                        android:textAlignment="textEnd"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/vkusno_i_tochka" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRestName1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_name1"
                        android:textAlignment="textStart"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewRestGrade1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_grade1"
                        android:textAlignment="textEnd"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/burger_king" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRestName2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_name2"
                        android:textAlignment="textStart"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewRestGrade2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_rest_grade2"
                        android:textAlignment="textEnd"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMap"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_map_text"
                        android:textAlignment="textStart"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:backgroundTint="#424242"
                        android:fontFamily="@font/anonymous_pro"
                        android:text="@string/main_menu_go_to_map_button"
                        android:textSize="20sp"
                        app:cornerRadius="20dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/temp_map" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>