<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.0"
    android:background="#2B2B2B"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="121dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anonymous_pro"
        android:text="Регистрация"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_language_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="34dp"
        android:gravity="center_horizontal"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_login"
            android:inputType="text"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextPassword0"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/br_text"
            android:ems="10"
            android:fontFamily="@font/anonymous_pro"
            android:hint="@string/reg_repeat_password"
            android:inputType="textPassword"
            android:textColor="#B3B3B3"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/anonymous_pro"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/reg_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>